# ride-control-computer

./: .gitignore  README.md  data.csv  pyproject.toml  rcc.service  requirements.txt  trec_test.py
.github/workflows/: python-app.yml
RCC-demo-1/: trec_test.py
profiles/: default.json
scripts/: open-logs.desktop  open-logs.sh  rcc-boot.desktop  rcc-boot.sh  rcc-startup.desktop  rcc-startup.sh  rcc-terminal.desktop  rcc-terminal.sh  start-rcc.desktop  start-rcc.sh  test_m1.py  update-rcc.desktop  update-rcc.sh
src/: ControlPanel.py
src/ride_control_computer/: RCC.py  RideTelemetry.py  RideTimer.py  fault_monitor.py  loop_timer.py  main.py  plc_watchdog.py  ride_profile.py  ride_sequencer.py
src/ride_control_computer/control_panel/: ControlPanel.py  HardwareControlPanel.py  MockControlPanel.py  WebControlPanel.py
src/ride_control_computer/motor_controller/: MockMotorController.py  MotorController.py  MotorData.py  RoboClaw.py  RoboClawSerialMC.py  RoboClaw_cmd.py  mc_faults.py
src/ride_control_computer/theming_controller/: MockThemeingController.py  ThemingController.py
src/ride_control_computer/webserver/: MockWebserverController.py  WebserverController.py
src/ride_control_computer/webserver/templates/: base.html  four.html  one.html  panel.html  three.html  two.html
tests/: conftest.py  test_FaultMonitor.py  test_HardwareControlPanel.py  test_RCC.py  test_RideSequencer.py  test_RoboClawSerialMC.py  test_RoboClawSerialMotorController.py  test_trivial.py
