[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ride-control-computer"
version = "0.1.0"
description = "Ride Control Computer (RCC) software"
readme = "README.md"
requires-python = "==3.13.5"
license = { text = "MIT" }
authors = [{ name = "Jack Justus" }]

dependencies = [
  "pyserial>=3.5",
  "pythoncrc>=1.21",
  "flask>=3.0",
  "waitress>=3.0",
  "gpiozero>=2.0",
  "lgpio"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.6.0",
  "black>=24.0.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
ride_control_computer = ["webserver/templates/*.html"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ride_control_computer"]

[project.scripts]
rcc = "ride_control_computer.main:main"